--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -16,11 +16,15 @@
     "axios": "^1.3.4",
     "child_process": "^1.0.2",
     "libp2p": "^0.35.0",
+    "libp2p-bootstrap": "^0.14.0",
+    "libp2p-circuit": "^0.3.7",
     "libp2p-gossipsub": "^0.13.0",
     "libp2p-kad-dht": "^0.28.6",
     "libp2p-mplex": "^0.10.7",
     "libp2p-noise": "^4.0.0",
     "libp2p-tcp": "^0.17.2",
+    "libp2p-websockets": "^0.16.2",
+    "peer-id": "^0.16.0",
     "public-ip": "^6.0.1",
     "wgrest": "^1.0.3"
   }
