--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "child_process": "^1.0.2",
+    "is-elevated": "^4.0.0",
     "libp2p": "^0.35.0",
     "libp2p-bootstrap": "^0.14.0",
     "libp2p-circuit": "^0.3.7",
@@ -24,8 +25,10 @@
     "libp2p-noise": "^4.0.0",
     "libp2p-tcp": "^0.17.2",
     "libp2p-websockets": "^0.16.2",
+    "path": "^0.12.7",
     "peer-id": "^0.16.0",
     "public-ip": "^6.0.1",
+    "sudo-prompt": "^9.2.1",
     "wgrest": "^1.0.3"
   }
 }
