--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -1,16 +1,29 @@
 {
   "name": "electron-app",
-  "version": "1.0.0",
+  "version": "1.3.1",
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "build": {
+    "appId": "31",
+    "productName": "VeilNet",
+    "directories": {
+        "output": "build"
+    },
+    "win": {
+        "target": "nsis"
+    }
+  },
+
   "devDependencies": {
-    "electron": "^23.2.1"
+    "electron": "^23.2.1",
+    "electron-builder": "^23.6.0"
   },
   "dependencies": {
     "axios": "^1.3.4",
