--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -14,13 +14,12 @@
     "appId": "31",
     "productName": "VeilNet",
     "directories": {
-        "output": "build"
+      "output": "build"
     },
     "win": {
-        "target": "nsis"
+      "target": "nsis"
     }
   },
-
   "devDependencies": {
     "electron": "^23.2.1",
     "electron-builder": "^23.6.0"
@@ -28,6 +27,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "child_process": "^1.0.2",
+    "ini": "^4.0.0",
     "is-elevated": "^4.0.0",
     "libp2p": "^0.35.0",
     "libp2p-bootstrap": "^0.14.0",
@@ -42,6 +42,7 @@
     "peer-id": "^0.16.0",
     "public-ip": "^6.0.1",
     "sudo-prompt": "^9.2.1",
-    "wgrest": "^1.0.3"
+    "wgrest": "^1.0.3",
+    "wireguard-tools": "^0.1.0"
   }
 }
