--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "base64url": "^3.0.1",
     "child_process": "^1.0.2",
     "ini": "^4.0.0",
     "is-elevated": "^4.0.0",
@@ -42,6 +43,7 @@
     "peer-id": "^0.16.0",
     "public-ip": "^6.0.1",
     "sudo-prompt": "^9.2.1",
+    "tweetnacl": "^1.0.3",
     "wgrest": "^1.0.3",
     "wireguard-tools": "^0.1.0"
   }
