--- a/electron-app/wireguard/config.conf
+++ b/electron-app/wireguard/config.conf
@@ -1,9 +1,9 @@
 [Interface]
-PrivateKey="kPpmPDzMbjX9LjcA5CQz7wUp8Ek3q4gwm5urXIx1klI="
+PrivateKey = uMjE2RMjH/5/8juyYy+t8Mx79UB7pLfBwyHKs4ij5Uc=
 Address=10.0.0.1/24
 ListenPort=31820
 
 [Peer]
-PublicKey="WAmgVYXkbT2bCtdcDwolI88/iVi/aHFzRlFN9mYi1b4="
+PublicKey = u63fKiLItqE2PFnxaTru95/9kJEmFt9SEORas8R5n0M=
 AllowedIPs=10.0.0.2/32
 Endpoint=127.0.0.1:31820
