--- a/electron-app/package.json
+++ b/electron-app/package.json
@@ -11,13 +11,13 @@
   "author": "",
   "license": "ISC",
   "build": {
-    "appId": "31",
-    "productName": "VeilNet",
+    "appId": "com.veilnet.app",
+    "productName": "Veilnet",
     "directories": {
       "output": "build"
     },
     "win": {
-      "target": "nsis"
+      "target": "portable"
     }
   },
   "devDependencies": {
@@ -28,7 +28,9 @@
     "axios": "^1.3.4",
     "base64url": "^3.0.1",
     "child_process": "^1.0.2",
+    "electron-sudo": "^4.0.12",
     "ini": "^4.0.0",
+    "install": "^0.13.0",
     "is-elevated": "^4.0.0",
     "libp2p": "^0.35.0",
     "libp2p-bootstrap": "^0.14.0",
@@ -39,6 +41,7 @@
     "libp2p-noise": "^4.0.0",
     "libp2p-tcp": "^0.17.2",
     "libp2p-websockets": "^0.16.2",
+    "npm": "^9.6.3",
     "path": "^0.12.7",
     "peer-id": "^0.16.0",
     "public-ip": "^6.0.1",
